# Social-Informatik-02467-project

./: .gitignore  Assignment2.ipynb  README.md  compose.yml  debugBuild.sh  flake.nix  pyproject.toml  startServer.sh
src/: ensure_dataset.py  explainer_notebook.ipynb  project.ipynb  projectB.ipynb
